# Physical_AI

./: .gitignore  EMBEDDING_PIPELINE_SETUP.md  README.md  docker-compose.yml  implementation_plan.md  integration_documentation.md  package.json  vercel_deployment_guide.md
.claude/: settings.local.json
.specify/memory/: constitution.md
Backend/: INSTALLATION_SUMMARY.md  agent.py  agent_orchestration.py  config.py  core_requirements.txt  docusaurus_integration.py  fastapi_endpoints.py  install_flexible.py  install_packages.py  main.py  mock_api.py  performance_benchmarks.py  pyproject.toml  rag_system.py  requirements.txt  requirements_new.txt  retrieval_logic.py  retrieval_tool.py  security_rate_limiting.py  simple_install.py  start_api.bat  test_api.py  testing_validation.py  verify_installation.py
Frontend/Physical_AI/: README.md  docusaurus.config.ts  package-lock.json  sidebars.ts  tsconfig.json
Frontend/Physical_AI/blog/: 2025-01-15-introduction-to-physical-ai-and-robotics.md  2025-02-20-deep-dive-into-robot-simulation-with-gazebo.md  2025-03-10-interactive-robot-control-with-react-and-ros.md  authors.yml  tags.yml
backend/app/: .env.example  README.md  api.py  config.py  pyproject.toml  retrieve.py  start_api.bat
history/prompts/general/: 001-update-book-name.general.prompt.md  (+2 more)
specs/1-embedding-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-retrieval-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/physical-ai-humanoid-robotics-textbook/: plan.md  spec.md  tasks.md
(+186 files in other folders)
