[project]
name = "embedding-pipeline"
version = "0.1.0"
description = "Embedding pipeline for Docusaurus documentation with Cohere and Qdrant"
authors = [{name = "Physical AI Team", email = "team@physical-ai.com"}]
requires-python = ">=3.8"
dependencies = [
    "cohere>=5.5.3",
    "qdrant-client>=1.9.1",
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]